# buybuy-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CHANGELOG.md  INTERFACES.md  PROMPTS.md  SMOKE_TEST_RECORD.md  SPEC.md  TASKS.md  TESTING.md
src/: app.py  cli.py
src/agents/: main_agent.py  prompts.py  research_agent.py  tools.py
src/context/: __init__.py  knowledge_provider.py  profile_provider.py  session_provider.py
src/models/: __init__.py  decision.py  research.py
src/prompts/: __init__.py  category_research.txt  main_agent_system.txt  product_search.txt
src/router/: __init__.py  action_router.py
src/store/: document_store.py
src/utils/: logger.py  runtime_config.py  session.py
tests/: test_action_router.py  test_app.py  test_cli.py  test_document_store.py  test_document_store_phase2.py  test_env_example.py  test_knowledge_provider.py  test_main_agent.py  test_models.py  test_phase1_smoke.py  test_profile_provider.py  test_prompts.py  test_research_agent.py  test_session_provider.py  test_tools.py
tests/fixtures/: 户外装备.json
